--- a/composer.json
+++ b/composer.json
@@ -1,40 +1,21 @@
 {
-  "name": "asmo/asmoria",
+  "name": "asmo/asmoria-basic",
   "description": "Asmoria CMS for education ideas",
   "keywords": [
     "asmoria",
     "asmo",
     "CMS"
   ],
-  "homepage": "http://www.asmoria.com/",
-  "type": "library",
-  "license": "BSD-3-Clause",
-  "authors": [
-    {
-      "name": "Yuriy Kvit",
-      "email": "asmoteh@gmail.com",
-      "homepage": "http://www.asmoria.com/",
-      "role": "Founder and project lead"
-    }
-  ],
-  "support": {
-    "issues": "https://github.com/YuriyKvit/asmo_profiler/issues?state=open",
-    "wiki": "http://www.asmoria.com/",
-    "source": "https://github.com/YuriyKvit/asmo_profiler"
-  },
+  "type": "project",
   "minimum-stability": "alpha",
   "require": {
     "php": ">=5.6.0",
-    "bower-asset/jquery": "2.2.*@stable | 2.1.*@stable | 1.11.*@stable | 1.12.*@stable"
-  },
-  "autoload": {
-    "psr-4": {
-      "asmoria\\": ""
-    }
+    "asmo/asmoria-fm": "*"
   },
   "extra": {
-    "branch-alias": {
-      "dev-master": "0.1.x-dev"
+    "asset-installer-paths": {
+      "npm-asset-library": "vendor/npm",
+      "bower-asset-library": "vendor/bower"
     }
   }
 }
